@@ -1,5 +1,10 @@
 2011-10-03 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* central_proxy/central_proxy.pl: Added proxy to request_log function
+	* central_proxy/RequestLog.pm: Changed request log format
+
+2011-10-03 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* central_proxy/central_proxy.pl: Changed monitoring function to support 
 	customized prefix names and groups.
 	* central_proxy/central_proxy.cfg: Added new parameters MONITORING_PREFIX, 
